# GBStudio

./: .SRCINFO  .gitignore  PKGBUILD  generate_history.py  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: MapEditor.tsx  MapGallery.tsx  SpriteStudio.tsx  TilePixelEditor.tsx  TilesetPanel.tsx  Toolbar.tsx
src/components/editors/: MapEditor.tsx  Settings.tsx  SoundStudio.tsx  SpriteStudio.tsx  TilePixelEditor.tsx
src/components/layout/: AppLayout.tsx  ExportPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/panels/: MapGallery.tsx  TilesetPanel.tsx  Toolbar.tsx
src/components/ui/: CustomSelect.tsx  ExportPreviewModal.tsx  ExportTemplateModal.tsx  Modal.tsx  ShortcutsModal.tsx  TemplateGallery.tsx  TitleBar.tsx
src/constants/: colors.ts
src/data/templates/: dungeon.ts  index.ts  mario.ts  overworld.ts  platformer-pro.ts  platformer.ts  sounds.ts  space.ts  sprite-pack.ts  village.ts
src/services/: drawingService.ts  exportService.ts  mapService.ts  projectService.ts  selectionService.ts  templateService.ts  tileService.ts
src/services/export/: headerGen.ts  index.ts  mapBuilder.ts  romAllocator.ts  sourceGen.ts  tiles.ts  types.ts  utils.ts
src/store/: index.ts  useStore.ts
src/store/slices/: historySlice.ts  (+8 more)
src/types/: core.ts  index.ts  map.ts  project.ts  selection.ts  sound.ts  sprite.ts  template.ts  tile.ts
src/utils/: exportUtils.ts  index.ts  keyboard.ts  validation.ts
(+31 files in other folders)
